external-crates/move/crates/move-compiler/tests/move_2024/verification/spec_only_do_filter_invariant_return_exp2.move
// do not filter out spec-only code when it would break the ast, like being the return expression

module a::m {
    #[spec_only]
    use prover::prover::{invariant};

    public fun foo() {
        if(true) {
            invariant!(something)
        };
    }
}
